--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
-    "rewrites": [
-        { "source": "/user/(.*)", "destination": "/user" },
-        { "source": "/blog/(.*)", "destination": "/blog" }
+    "version": 2,
+    "name": "youtube-blog",
+    "builds": [
+        { "src": "index.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+        { "src": "/(.*)", "dest": "/index.js" }
     ]
 }
